# uv-to-pipfile

./: .pre-commit-config.yaml  .pre-commit-hooks.yaml  README.md  cookiecutter.json  pyproject.toml
src/uv_to_pipfile/: uv_to_pipfile.py  uv_to_pipfile2.py
tests/: _types.py  utils.py  utils_test.py  uv_to_pipfile_test.py
tests/test_files/: Pipfile
tests/test_files/variation1/: pyproject.toml
