[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "uv-to-pipfile"
dynamic = ["version"]
description = "A tool to convert uv.lock files to Pipfile.lock."
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
keywords = ["pre-commit", "hook", "uv.lock", "Pipfile.lock", "dependency management", "python"]
authors = [
  { name = "Flavio Amurrio", email = "25621374+FlavioAmurrioCS@users.noreply.github.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
  "tomli>=1.1.0 ; python_full_version < '3.11'",
]

[project.optional-dependencies]
dev = [
]
tests = [
  "persistent-cache-decorator",
  "uv",
  "pipenv",
]
types = ["typing-extensions"]

[project.urls]
Documentation = "https://github.com/FlavioAmurrioCS/uv-to-pipfile#readme"
Issues = "https://github.com/FlavioAmurrioCS/uv-to-pipfile/issues"
Source = "https://github.com/FlavioAmurrioCS/uv-to-pipfile"

[project.scripts]
uv-to-pipfile = "uv_to_pipfile.uv_to_pipfile:main"


[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "src/uv_to_pipfile/_version.py"

[tool.hatch.envs.hatch-test]
extra-dependencies = [
  "uv-to-pipfile[types,dev,tests]",
]

[tool.hatch.envs.types]
extra-dependencies = [
  "mypy>=1.0.0",
  "uv-to-pipfile[types]",
]

[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/uv_to_pipfile tests}"

[tool.coverage.run]
source_pkgs = ["uv_to_pipfile", "tests"]
branch = true
parallel = true
omit = [
]

[tool.coverage.paths]
uv_to_pipfile = ["src/uv_to_pipfile", "*/uv-to-pipfile/src/uv_to_pipfile"]
tests = ["tests", "*/uv-to-pipfile/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]

# COMMON SETTINGS BELOW
[tool.hatch.envs.hatch-static-analysis]
config-path = "none"

[tool.pyright]
pythonVersion = "3.8"

[tool.mypy]
python_version = "3.9"
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true

[tool.ruff.lint.isort]
force-single-line = true

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = [
  "ALL",
]
ignore = [
  "COM812", # missing-trailing-comma
  "ISC001", # single-line-implicit-string-concatenation
  "ERA001",
  "D",
  "PTH",
  "T20",
  "EXE003",
]

[tool.ruff.format]
docstring-code-format = true
docstring-code-line-length = 100

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [
  "S101",
]
